<resources>
    <string name="app_name">Assignment4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_fail_message">Login Failed. Wrong Username or Password</string>
    <string name="login_success_message">Login Success</string>
    <string name="sample_product_name">Product Name</string>
    <string name="sample_product_date">2024–02–29</string>
    <string name="sample_product_price">$ 45</string>
    <string name="product_image_description">Product Image</string>
    <string name="no_product_message">No Product Available</string>
    <string name="default_page_num">1</string>
    <string name="page_prev_button_desc">Prev Button</string>
    <string name="page_next_button_desc">Next Button</string>
</resources>