<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    tools:context=".ProductFragment">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/product_image_description"
        android:src="@drawable/equipment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/sample_product_name"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/productDate"
        app:layout_constraintStart_toEndOf="@+id/productImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_product_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/productDate"
        app:layout_constraintTop_toBottomOf="@+id/productDate" />

    <TextView
        android:id="@+id/productDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_product_date"
        app:layout_constraintBottom_toTopOf="@+id/productPrice"
        app:layout_constraintStart_toStartOf="@+id/productName"
        app:layout_constraintTop_toBottomOf="@+id/productName" />

</androidx.constraintlayout.widget.ConstraintLayout>