<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_product_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_product_message"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/productList"
        app:layout_constraintEnd_toEndOf="@+id/productList"
        app:layout_constraintStart_toStartOf="@+id/productList"
        app:layout_constraintTop_toTopOf="@+id/productList" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productList"
        >

        <ImageButton
            android:id="@+id/product_page_prev"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@null"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:contentDescription="@string/page_prev_button_desc" />

        <TextView
            android:id="@+id/page_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_page_num"
            android:textAlignment="center"
            android:textSize="24sp"/>

        <ImageButton
            android:id="@+id/product_page_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@null"
            android:src="@drawable/baseline_arrow_forward_ios_24"
            android:contentDescription="@string/page_next_button_desc" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>